[gd_scene load_steps=7 format=3 uid="uid://dt7nflcejhhkc"]

[ext_resource type="Script" path="res://main/main.gd" id="1_h8aja"]
[ext_resource type="PackedScene" uid="uid://cpqk5m62jc80x" path="res://enemy/enemy_container.tscn" id="2_0h28o"]
[ext_resource type="PackedScene" uid="uid://bns64xsow8lv7" path="res://ui/menu_ui.tscn" id="4_6wlta"]
[ext_resource type="PackedScene" uid="uid://b7v3s1er0ft2c" path="res://scrolling_bg/scrolling_bg.tscn" id="6_s3rym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhyef"]
size = Vector2(1184, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpeto"]
size = Vector2(1182.5, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1_h8aja")

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="EventSpawner" parent="." instance=ExtResource("2_0h28o")]

[node name="EnemyContainer" parent="." instance=ExtResource("2_0h28o")]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.5

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 22.0

[node name="SalamanderTimer" type="Timer" parent="."]
wait_time = 21.0

[node name="MenuUI" parent="." instance=ExtResource("4_6wlta")]

[node name="GameOverArea" type="Area2D" parent="."]
position = Vector2(63, 824)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverArea"]
position = Vector2(582, 0)
shape = SubResource("RectangleShape2D_lhyef")

[node name="PromptMoveArea" type="Area2D" parent="."]
position = Vector2(-5, 699)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PromptMoveArea"]
position = Vector2(643, -170)
shape = SubResource("RectangleShape2D_wpeto")

[node name="ScrollingBG" parent="." instance=ExtResource("6_s3rym")]
process_mode = 1

[node name="sfx" type="AudioStreamPlayer" parent="."]
pitch_scale = 0.85
bus = &"Sfx"

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
[connection signal="timeout" from="SalamanderTimer" to="." method="_on_salamander_timer_timeout"]
[connection signal="body_entered" from="GameOverArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="PromptMoveArea" to="." method="_on_prompt_move_area_body_entered"]
